# jackery_solarvault

./: ..codecov.yml  .bunfig.toml  .codecov.yml  .codefactor  .gitignore  .pre-commit-config.yaml  .smellcheck-baseline.json  AGENTS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  autofix-local.yml  autofix.yml  build_docs.py  bunfig.toml  check_compile.py  check_docs_root.py  check_legacy_exception_syntax.py  check_typed_dicts.py  check_vendor_pyyaml.py  clean_caches.py  codecov.yml  coordinator.py  copilot-instructions.md  coverage.xml  currencies.py  diagnostics.py  discovery_cache.py  gate.py  ha-smoke-install.yaml  hacs.json  hass_decorator.py  hass_enforce_greek_micro_char.py  hass_inheritance.py  homeassistant_upgrade_rules.json  jackery_auth.py  jackery_command_catalog_v2.csv  jackery_entity_field_candidates_v2.json  jackery_smali_home_assistant_report.md  (+23 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: CONTRIBUTING.md  FUNDING.yml  autofix.yml  ci.yml  codecov.yml  dependabot.yml  dependency-review.yml  gate.yml  ha-smoke-install.yaml  ha-smoke-install.yml  label.yml  labeler.yml  manual-codecov-upload.yml  pre-commit-ci-lite.yml  python-modernization.yml  release-drafter.yml  release-please.yml  release.yml  reusable-marketplace-validation.yml  reusable-python-tests.yml  (+6 more)
REFACTORSLOP/: _api_merge_diff.txt  _bughunt_recovered.json  _dup_const_audit.py  _extract_missing.py  _field_audit.py  _full_reconcile_plan.txt  _loss_audit.py  _loss_audit_current.json  _merge_loss_report.txt  _missing_sources.json  _missing_sources.md  _reconcile_residual___init__.py.txt  _reconcile_residual_binary_sensor.py.txt  _reconcile_residual_button.py.txt  _reconcile_residual_client___init__.py.txt  _reconcile_residual_client_api.py.txt  _reconcile_residual_client_ble.py.txt  _reconcile_residual_client_ble_transport.py.txt  _reconcile_residual_client_local_mqtt.py.txt  _reconcile_residual_client_mqtt_push.py.txt  _reconcile_residual_client_third_party_mqtt_codec.py.txt  _reconcile_residual_config_flow.py.txt  _reconcile_residual_coordinator.py.txt  _reconcile_residual_diagnostics.py.txt  _reconcile_residual_discovery_cache.py.txt  _reconcile_residual_entity.py.txt  _reconcile_residual_local_daily_cache.py.txt  _reconcile_residual_mqtt_session_cache.py.txt  _reconcile_residual_number.py.txt  _reconcile_residual_repairs.py.txt  _reconcile_residual_select.py.txt  _reconcile_residual_sensor.py.txt  _reconcile_residual_services.py.txt  _reconcile_residual_switch.py.txt  _reconcile_residual_text.py.txt  _reconcile_residual_util.py.txt  _residual_code_client_api.py.txt  _restoration_plan.md
claude/: settings.local.json
client/: api.py  ble_transport.py  local_mqtt.py  mqtt_session_cache.py
coderabbit/: .coderabbit.yaml  _tmp_extract.py  _tmp_keys.py
docs/: AGENTS.md  APP_CLOUD_VALUES.md  APP_POLLING_MQTT.md  APP_STRUKTUR.md  CODE_MAP.md  COORDINATOR_REFACTORING_PLAN.md  COVERAGE_EXCLUSIONS.md  DATA_SOURCE_PRIORITY.md  DERIVED_PROTOCOL_DOCS.md  HTTP_ENDPOINT_MAPPING.md  Jackery_2.1.1_DEX_Aufschluesselung.md  Jackery_2.1.1_RE_Crypto_and_DTOs.md  Jackery_2.1.1_RE_Documentation.md  Jackery_2.1.1_RE_Supplement.md  MQTT_PROTOCOL.md  PLATINUM_CHECKLIST.md  PROTOCOL.md  README.de.md  README.es.md  README.fr.md  REFERENCE_COVERAGE.md  REPAIR_ROADMAP.md  SENSOR_SOURCE_PATHS.md  STRICT_WORK_INSTRUCTIONS.md  STRUKTUR.md  UNIQUE_ID_CONTRACT.md  WIRING_REFERENCE.md  Werte aus APP-Cloud.md  ha_custom_config_and_best_practices.json  hbxn_model_fields.csv  jackery_command_catalog_v2.csv  jackery_complete_reference.json  jackery_entity_field_candidates_v2.json  jackery_smali_home_assistant_report.md  jackery_smali_home_assistant_report_v2.md
scripts/: AGENTS.py  Textdokument (neu).txt  autofix-local.yml  autofix.yml  build_docs.py  check_compile.py  check_docs_root.py  check_legacy_exception_syntax.py  check_reference_coverage.py  check_typed_dicts.py  check_vendor_pyyaml.py  check_workflows.py  clean_caches.py  countries.py  currencies.py  deprecation.py  enforce_coverage_gates  enforce_coverage_gates.py  enforce_docstring_baseline.py  enforce_shared_session_guard.py  enforce_test_requirements.py  enforce_test_todo_policy.py  gate.py  gen_requirements_all.py  ha-smoke-install.yml  hass.bat  hass_async_load_fixtures.py  hass_decorator.py  hass_enforce_class_module.py  hass_enforce_greek_micro_char.py  hass_enforce_sorted_platforms.py  hass_enforce_super_call.py  hass_enforce_type_hints.py  hass_imports.py  hass_inheritance.py  hass_logger.py  hassfest.py  homeassistant_push_guard.py  inspect_schemas.py  install_integration_requirements.py  (+18 more)
source-of-truth/: README.md  hbxn_commands.csv  hbxn_model_fields.html  jackery_auth.py  jackery_complete_reference.json  jackery_ha_extraction_v2.json
tests/: TEST_CATEGORIES.md  __init__.py  conftest.py  test_api.py  test_api_auth_relogin.py  test_api_contract_direct.py  test_api_contracts.py  test_api_pr_changes.py  test_battery_pack_sn_tracking.py  test_battery_pack_stability.py  test_binary_sensor_values.py  test_ble_cmd120.py  test_ble_command_connect.py  test_ble_connect_backoff.py  test_ble_frame.py  test_ble_notify_contract.py  test_ble_pr_changes.py  test_ble_transport.py  test_ble_update_coalescing.py  test_button_commands.py  test_button_descriptions.py  test_button_new_coverage.py  test_button_outcomes.py  test_client_api_counters.py  test_client_api_price.py  test_client_exports_and_legacy_ids.py  test_code_quality.py  test_config_flow.py  test_config_flow_accept_shared.py  test_config_flow_core.py  test_config_flow_ha.py  test_config_flow_helpers.py  test_config_flow_reconfigure_local_mqtt.py  test_config_flow_shelly.py  test_coordinator_accessory_enumeration.py  test_coordinator_app_chart_statistics.py  test_coordinator_background_refresh.py  test_coordinator_backoff.py  test_coordinator_extraction_facades.py  test_coordinator_local_first_mqtt.py  (+102 more)
translations/: de.json
(+271 files in other folders)
