# pyproject.toml — Tooling für die jackery_solarvault Home-Assistant-Integration
[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jackery_solarvault"
description = "Solarvault integration for Home Assistant"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bigdaddy1990" }]
keywords = ["home assistant", "jackery_solarvault", "solar", "automation", "telemetry"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
  "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.14"

[options]
python_requires = ">=3.14"

[tool.ty.environment]
python-version = "3.14"

[project.urls]
Homepage = "https://github.com/Bigdaddy1990/jackery_solarvault"
Documentation = "https://github.com/Bigdaddy1990/jackery_solarvault/blob/main/README.md"
Issues = "https://github.com/Bigdaddy1990/jackery_solarvault/issues"

[tool.pytest.ini_options]
addopts = "-p no:pytest_cov -p pytest_cov.plugin -p pytest_homeassistant_custom_component --cov=custom_components/jackery_solarvault --cov-branch --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov -q -ra --strict-markers --strict-config --tb=short --maxfail=20"
markers = [
  "asyncio: mark a test as using asyncio",
  "ci_only: mark a test to run only in CI",
  "benchmark: mark a test as benchmark/performance",
  "unit: fast isolated tests",
  "integration: Home Assistant integration tests",
  "slow: long-running tests",
]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "__pycache__", "pytest-cache-files-*"]
pythonpath = ["."]
asyncio_debug = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error",
  # asyncio event-loop deprecation raised by Python 3.12+ internals
  "ignore:There is no current event loop:DeprecationWarning",
  "ignore:coroutine .* was never awaited:RuntimeWarning",
  # Ignore pytest-asyncio fixture deprecations when real plugin present
  "ignore::pytest.PytestUnraisableExceptionWarning",
  "error::sqlalchemy.exc.SAWarning",
  "error:usefixtures\\(\\) in .* without arguments has no effect:UserWarning", # pytest

  # -- HomeAssistant - aiohttp
  # Overwrite web.Application to pass a custom default argument to _make_request
  "ignore:Inheritance class HomeAssistantApplication from web.Application is discouraged:DeprecationWarning",
  # Hass wraps `ClientSession.close` to emit a warning if the session is closed accidentally
  "ignore:Setting custom ClientSession.close attribute is discouraged:DeprecationWarning:homeassistant.helpers.aiohttp_client",
  # Modify app state for testing
  "ignore:Changing state of started or joined application is deprecated:DeprecationWarning:tests.components.http.test_ban",

  # -- Tests
  # Ignore custom pytest marks
  "ignore:Unknown pytest.mark.disable_autouse_fixture:pytest.PytestUnknownMarkWarning:tests.components.met",
  "ignore:Unknown pytest.mark.dataset:pytest.PytestUnknownMarkWarning:tests.components.screenlogic",

  # -- DeprecationWarning already fixed in our codebase
  # https://github.com/kurtmckee/feedparser/ - 6.0.12
  "ignore:.*a temporary mapping .* from `updated_parsed` to `published_parsed` if `updated_parsed` doesn't exist:DeprecationWarning:feedparser.util",

  # -- design choice 3rd party
  # https://github.com/gwww/elkm1/blob/2.2.13/elkm1_lib/util.py#L8-L19
  "ignore:ssl.TLSVersion.TLSv1 is deprecated:DeprecationWarning:elkm1_lib.util",
  # https://github.com/bachya/regenmaschine/blob/2024.03.0/regenmaschine/client.py#L52
  "ignore:ssl.TLSVersion.SSLv3 is deprecated:DeprecationWarning:regenmaschine.client",

  # -- Setuptools DeprecationWarnings
  # https://github.com/Azure/azure-sdk-for-python
  "ignore:Deprecated call to `pkg_resources.declare_namespace\\('azure'\\)`:DeprecationWarning:pkg_resources",

  # -- tracked upstream / open PRs
  # https://github.com/hacf-fr/meteofrance-api/pull/688 - v1.4.0 - 2025-03-26
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:meteofrance_api.model.forecast",

  # -- fixed, waiting for release / update
  # https://github.com/httplib2/httplib2/pull/226 - >=0.21.0
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:httplib2",
  # https://github.com/httplib2/httplib2/pull/253 - >=0.31.1
  "ignore:'(addParseAction|delimitedList|leaveWhitespace|setName|setParseAction)' deprecated:DeprecationWarning:httplib2.auth",
  # https://github.com/lawtancool/pyControl4/pull/47 - >=1.6.0
  "ignore:with timeout\\(\\) is deprecated, use async with timeout\\(\\) instead:DeprecationWarning:pyControl4.account",
  # https://pypi.org/project/pyqwikswitch/ - >=1.0
  "ignore:client.loop property is deprecated:DeprecationWarning:pyqwikswitch.async_",
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:pyqwikswitch.async_",
  # https://github.com/allenporter/python-google-nest-sdm/pull/1229 - >9.1.2
  "ignore:datetime.*utcnow\\(\\) is deprecated:DeprecationWarning:google_nest_sdm.device",
  # https://github.com/rytilahti/python-miio/pull/1809 - >=0.6.0.dev0
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:miio.protocol",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:miio.miioprotocol",
  # https://github.com/rytilahti/python-miio/pull/1993 - >0.6.0.dev0
  "ignore:functools.partial will be a method descriptor in future Python versions; wrap it in enum.member\\(\\) if you want to preserve the old behavior:FutureWarning:miio.miot_device",
  # https://github.com/pyusb/pyusb/pull/545 - >1.3.1
  "ignore:Due to '_pack_', the '.*' Structure will use memory layout compatible with MSVC:DeprecationWarning:usb.backend.libusb0",
  # https://github.com/xchwarze/samsung-tv-ws-api/pull/151 - >=3.0.0 - 2024-12-06  # wrong stacklevel in aiohttp
  "ignore:verify_ssl is deprecated, use ssl=False instead:DeprecationWarning:aiohttp.client",

  # -- other
  # Locale changes might take some time to resolve upstream
  # https://github.com/Squachen/micloud/blob/v_0.6/micloud/micloud.py#L35 - v0.6 - 2022-12-08
  "ignore:'locale.getdefaultlocale' is deprecated and slated for removal in Python 3.15:DeprecationWarning:micloud.micloud",
  # https://pypi.org/project/agent-py/ - v0.0.24 - 2024-11-07
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:agent.a",
  # https://github.com/MatsNl/pyatag/issues/11 - v0.3.7.1 - 2023-10-09
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:pyatag.gateway",
  # https://github.com/lidatong/dataclasses-json/issues/328
  # https://github.com/lidatong/dataclasses-json/pull/351
  "ignore:The 'default' argument to fields is deprecated. Use 'dump_default' instead:DeprecationWarning:dataclasses_json.mm",
  # https://pypi.org/project/emulated-roku/ - v0.3.0 - 2023-12-19
  # https://github.com/martonperei/emulated_roku
  "ignore:loop argument is deprecated:DeprecationWarning:emulated_roku",
  # https://github.com/EnergieID/energyid-webhooks-py/ - v0.0.14 - 2025-05-06
  "ignore:The V1 WebhookClient is deprecated:DeprecationWarning:energyid_webhooks",
  # https://pypi.org/project/foobot_async/ - v1.0.1 - 2024-08-16
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:foobot_async",
  # https://pypi.org/project/motionblindsble/ - v0.1.3 - 2024-11-12
  # https://github.com/LennP/motionblindsble/blob/0.1.3/motionblindsble/device.py#L390
  "ignore:Passing additional arguments for BLEDevice is deprecated and has no effect:DeprecationWarning:motionblindsble.device",
  # https://pypi.org/project/pyeconet/ - v0.2.2 - 2026-03-05
  # https://github.com/w1ll1am23/pyeconet/blob/v0.2.2/src/pyeconet/api.py#L39
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:pyeconet.api",
  # https://github.com/thecynic/pylutron - v0.2.18 - 2025-04-15
  "ignore:setDaemon\\(\\) is deprecated, set the daemon attribute instead:DeprecationWarning:pylutron",
  # https://pypi.org/project/PyMetEireann/ - v2024.11.0 - 2024-11-23
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:meteireann",
  # https://github.com/pschmitt/pynuki/blob/1.6.3/pynuki/utils.py#L21 - v1.6.3 - 2024-02-24
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:pynuki.utils",
  # https://github.com/lextudio/pysnmp/blob/v7.1.21/pysnmp/smi/compiler.py#L23-L31 - v7.1.21 - 2025-06-19
  "ignore:smiV1Relaxed is deprecated. Please use smi_v1_relaxed instead:DeprecationWarning:pysnmp.smi.compiler",
  "ignore:getReadersFromUrls is deprecated. Please use get_readers_from_urls instead:DeprecationWarning:pysnmp.smi.compiler",
  # https://github.com/frenck/python-radios/blob/v0.3.2/src/radios/radio_browser.py#L76 - v0.3.2 - 2024-10-26
  "ignore:query\\(\\) is deprecated, use query_dns\\(\\) instead:DeprecationWarning:radios.radio_browser",
  # https://github.com/python-telegram-bot/python-telegram-bot/blob/v22.7/src/telegram/error.py#L243 - 22.7 - 2026-03-16
  "ignore:Deprecated since version v22.2.*attribute `retry_after` will be of type `datetime.timedelta`:DeprecationWarning:telegram.error",
  # https://github.com/briis/pyweatherflowudp/blob/v1.4.5/pyweatherflowudp/const.py#L20 - v1.4.5 - 2023-10-10
  "ignore:This function will be removed in future versions of pint:DeprecationWarning:pyweatherflowudp.const",
  # - SyntaxWarnings - invalid escape sequence
  # https://pypi.org/project/aprslib/ - v0.7.2 - 2022-07-10
  "ignore:.*invalid escape sequence:SyntaxWarning:.*aprslib.parsing.common",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:aprslib.parsing.common",
  # https://pypi.org/project/panasonic-viera/ - v0.4.4 - 2025-11-25
  # https://github.com/florianholzapfel/panasonic-viera/blob/0.4.4/panasonic_viera/remote_control.py#L665
  "ignore:.*invalid escape sequence:SyntaxWarning:.*panasonic_viera",
  # https://pypi.org/project/pyblackbird/ - v0.6 - 2023-03-15
  # https://github.com/koolsb/pyblackbird/pull/9 -> closed
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pyblackbird",
  # https://pypi.org/project/pyws66i/ - v1.1 - 2022-04-05
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pyws66i",
  # https://pypi.org/project/sanix/ - v1.0.6 - 2024-05-01
  # https://github.com/tomaszsluszniak/sanix_py/blob/v1.0.6/sanix/__init__.py#L42
  "ignore:.*invalid escape sequence:SyntaxWarning:.*sanix",
  # https://pypi.org/project/sleekxmppfs/ - v1.4.1 - 2022-08-18
  "ignore:.*invalid escape sequence:SyntaxWarning:.*sleekxmppfs.thirdparty.mini_dateutil", # codespell:ignore thirdparty
  # - SyntaxWarning - is with literal
  # https://github.com/majuss/lupupy/pull/15 - >0.3.2
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*lupupy.devices.alarm",
  # https://pypi.org/project/opuslib/ - v3.0.1 - 2018-01-16
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*opuslib.api.decoder",
  # https://pypi.org/project/pyiss/ - v1.0.1 - 2016-12-19
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*pyiss",
  # - SyntaxWarning - return in finally
  # https://github.com/nextcord/nextcord/pull/1268 - >3.1.1 - 2025-08-16
  "ignore:'return' in a 'finally' block:SyntaxWarning:.*nextcord.(gateway|player)",
  # https://pypi.org/project/sleekxmppfs/ - v1.4.1 - 2022-08-18
  "ignore:'return' in a 'finally' block:SyntaxWarning:.*sleekxmppfs.(roster.single|xmlstream.xmlstream)",

  # -- New in Python 3.13
  # https://github.com/youknowone/python-deadlib - Backports for aifc, telnetlib
  "ignore:aifc was removed in Python 3.13.*'standard-aifc':DeprecationWarning:speech_recognition",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:homeassistant.components.hddtemp.sensor",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:ndms2_client.connection",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:pyws66i",

  # -- New in Python 3.14
  # https://github.com/litl/backoff/pull/220 - v2.2.1 - 2022-10-05 (archived)
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:(backoff._decorator|backoff._async)",
  # https://github.com/albertogeniola/elmax-api - v0.0.6.3 - 2024-11-30
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:elmax_api.http",
  # https://github.com/nextcord/nextcord/pull/1269 - >3.1.1 - 2025-08-16
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:nextcord.member",
  # https://github.com/svinota/pyroute2
  "ignore:Due to '_pack_', the '.*' Structure will use memory layout compatible with MSVC:DeprecationWarning:pyroute2.ethtool.ioctl",
  # https://github.com/googleapis/python-genai
  "ignore:Inheritance class AiohttpClientSession from ClientSession is discouraged:DeprecationWarning:google.genai._api_client",
  "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types",

  # -- Websockets 14.1
  # https://websockets.readthedocs.io/en/stable/howto/upgrade.html
  "ignore:websockets.legacy is deprecated:DeprecationWarning:websockets.legacy",

  # -- unmaintained projects, last release about 2+ years
  # https://pypi.org/project/aiomodernforms/ - v0.1.8 - 2021-06-27
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:aiomodernforms.modernforms",
  # https://pypi.org/project/colorthief/ - v0.2.1 - 2017-02-09
  "ignore:Image.Image.getdata is deprecated and will be removed in Pillow 14.* Use get_flattened_data instead:DeprecationWarning:colorthief",
  # https://pypi.org/project/directv/ - v0.4.0 - 2020-09-12
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:directv.directv",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:directv.models",
  # https://pypi.org/project/enocean/ - v0.50.1 (installed) -> v0.60.1 - 2021-06-18
  "ignore:It looks like you're using an HTML parser to parse an XML document:UserWarning:enocean.protocol.eep",
  # https://pypi.org/project/influxdb/ - v5.3.2 - 2024-04-18 (archived)
  "ignore:datetime.*utcfromtimestamp\\(\\) is deprecated and scheduled for removal:DeprecationWarning:influxdb.line_protocol",
  # https://pypi.org/project/lark-parser/ - v0.12.0 - 2021-08-30 -> moved to `lark`
  # https://pypi.org/project/commentjson/ - v0.9.0 - 2020-10-05
  # https://github.com/vaidik/commentjson/issues/51
  # https://github.com/vaidik/commentjson/pull/52
  # Fixed upstream, commentjson depends on old version and seems to be unmaintained
  "ignore:module '(sre_parse|sre_constants)' is deprecate:DeprecationWarning:lark.utils",
  # https://pypi.org/project/lomond/ - v0.3.3 - 2018-09-21
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:lomond.session",
  # https://pypi.org/project/oauth2client/ - v4.1.3 - 2018-09-07 (archived)
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:oauth2client.client",
  # https://pypi.org/project/pilight/ - v0.1.1 - 2016-10-19
  "ignore:pkg_resources is deprecated as an API:UserWarning:pilight",
  # https://pypi.org/project/pure-python-adb/ - v0.3.0.dev0 - 2020-08-05
  "ignore:.*invalid escape sequence:SyntaxWarning:.*ppadb",
  # https://pypi.org/project/pydub/ - v0.25.1 - 2021-03-10
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pydub.utils",
  # https://pypi.org/project/PyPasser/ - v0.0.5 - 2021-10-21
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pypasser.utils",
  # https://pypi.org/project/rxv/ - v0.7.0 - 2021-10-10
  "ignore:defusedxml.cElementTree is deprecated, import from defusedxml.ElementTree instead:DeprecationWarning:rxv.ssdp",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "*cache*",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "scripts",
    "docs",
    "logs",
    "APP",
]
target-version = "py314"
line-length = 88
#src = ["custom_components", "tests"]
indent-width = 4
show-fixes = true
fix = true
unsafe-fixes = true
#force-exclude = true
output-format= "github"
preview = true

[tool.ruff.analyze]
detect-string-imports = true
direction = "dependencies"
string-imports-min-dots = 2
preview= true

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "UP", "B", "SIM", "Q", "D", "W", "C", "RUF", "NPY", "ASYNC", "N", "ANN"]
ignore = ["E501"]
fixable = ["ALL"]
unfixable = []
future-annotations = true #TODO prüfen ob mit py314 benötigt
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
logger-objects = ["logging_setup.logger"]

[tool.ruff.lint.per-file-ignores]
# RUF067 (preview): the integration root __init__.py legitimately holds
# setup/unload/cleanup logic per the HA component contract, not just
# re-exports — so the rule does not apply to HA integration packages.
"**/__init__.py" = ["F401", "F403", "E402", "RUF067"]

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = ["propcache.api.cached_property"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"
"__future__.annotations".msg = "It should not be needed because Home Assistant requires Python 3.14+"
"cgi".msg = "The cgi module is deprecated, see https://peps.python.org/pep-0594/#cgi."
"typing.TypedDict".msg = "Use typing_extensions.TypedDict instead."

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "custom_components", "pytest_"]
combine-as-imports = true
split-on-trailing-comma = false
case-sensitive = true
order-by-type = true
single-line-exclusions = ["os", "json"]

[tool.ruff.lint.pyupgrade]
# Preserve types
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
# HA entity methods (async_turn_on/off, set_*, etc.) carry the framework's
# ``**kwargs: Any`` signature verbatim — the keyword payload is genuinely
# open per the entity platform contract, so ANN401 on *args/**kwargs is noise.
allow-star-arg-any = true

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true
strict = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list"

[tool.ruff.lint.flake8-tidy-imports]
# Require lazy imports by default, except for modules with import-time side effects.
require-lazy = { include = "all", exclude = ["sitecustomize"] }

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = "deprecated"
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
sqlite_cache = false

[[tool.mypy.overrides]]
module = ["custom_components.jackery_solarvault.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
# Strict typing is still in progress; keep these exceptions explicit until
# they can be removed under the final Home Assistant typing profile.
warn_return_any = true
disable_error_code = [
  "no-any-return",  # HA core / aiohttp helpers return Any in many places
  "arg-type",  # number.py value_transform widens int → float by design
  "operator",  # period totals fold None vs float at runtime via guards
  "type-arg",  # asyncio.Task / coordinator hints intentionally accept generic dicts
  "misc",  # dynamic TypedDict construction in HA service / repair payloads
  "call-arg",  # ConfigFlow(domain=...) keyword forwarded via __init_subclass__
]

[tool.coverage.run]
branch = true
source = ["custom_components/jackery_solarvault"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
skip_covered = true
precision = 2
ignore_errors = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
tests = { file = ["requirements-test.txt"] }

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint.REPORTS]
score = true

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = [
  "builtins.BaseException",
  "builtins.Exception",
  # "homeassistant.exceptions.HomeAssistantError",  # too many issues
]

[tool.pylint.TYPING]
runtime-typing = false

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 72

[tool.pylint.TYPECHECK]
ignored-classes = [
  "_CountingAttr", # for attrs
]
mixin-class-rgx = ".*[Mm]ix[Ii]n"
